Add indents attribute, | conditional attribute, sort levels
Added the indents attribute to allow control of indenting, also made
indenting count only levels being displayed.
Added first of the conditional attributes | (defined or value)
Added control of which levels to sort by (range only)

--- a/flexndex.asciidoc
+++ b/flexndex.asciidoc
@@ -59,30 +59,30 @@ The index content is created by the following steps:
 * generation of missing entries,
 * iteration through the entries performing:
 ** filtering of entries, and
-** substitution of terms and attributes of the entry into output 
+** substitution of terms and attributes of the entry into output
 markup templates from the configuration settings.
 
 Selection of Entries
 ^^^^^^^^^^^^^^^^^^^^
 
-Selection is by the name of the index and a set of terms that must be 
-a prefix of the terms in the entries.  Specifying no terms means no 
+Selection is by the name of the index and a set of terms that must be
+a prefix of the terms in the entries.  Specifying no terms means no
 selection, all entries for the index are shown.
 
 Sorting of entries
 ^^^^^^^^^^^^^^^^^^
 
-The selected entries are sorted by each level in order comparing the 
+The selected entries are sorted by each level in order comparing the
 terms by Unicode code point.
 
 Generation
 ^^^^^^^^^^
 
-Only the leaf nodes of the hierarchy of terms are specified by the 
-*ix* comment.  However some display styles require the internal levels 
+Only the leaf nodes of the hierarchy of terms are specified by the
+*ix* comment.  However some display styles require the internal levels
 for display.  Missing levels are generated during the iteration process.
 
-See <<confset, Configuration Settings>> for settings controlling 
+See <<confset, Configuration Settings>> for settings controlling
 generation.
 
 Iteration
@@ -92,7 +92,7 @@ The default iteration of entries is simply in sorted order start to
 finish, but options outlined in <<iir, Index Inclusion Request>> allow
 iteration orders suitable for multiple column output.
 
-For each entry the terms in the entry are iterated in increasing level 
+For each entry the terms in the entry are iterated in increasing level
 order.
 
 
@@ -100,7 +100,7 @@ Filtering
 +++++++++
 
 In some use-cases not all entries need to be displayed, but they are
-needed for generation of missing entries.  The display filters specify 
+needed for generation of missing entries.  The display filters specify
 which entries to display.
 
 Filtering can also limit which terms within entries are displayed.
@@ -110,8 +110,8 @@ See <<iir, Index Inclusion Request>> for filter control attributes.
 Substitution
 ++++++++++++
 
-The substitution templates are chosen using the iteration components 
-(eg level).  See <<confset, Configuration Settings>> for the 
+The substitution templates are chosen using the iteration components
+(eg level).  See <<confset, Configuration Settings>> for the
 components supported.
 
 The attributes are substituted as defined in <<Substitutions>>.
@@ -180,15 +180,18 @@ cols:: specify collimation parameters, format is nnidbbb where:
 
 nn::: is the number of columns (decimal number)
 
-id::: is the iteration and direction control, l = linear or i = 
-interlaced and r = by row or c = by column.  Note: Only 'lc' is 
+id::: is the iteration and direction control, l = linear or i =
+interlaced and r = by row or c = by column.  Note: Only 'lc' is
 implemented in v0.1.
 
 bbb::: is the column break control, default (no bbb) = make columns as
-close to same length as possible, lnn = break at level nn (or less), 
+close to same length as possible, lnn = break at level nn (or less),
 but won't change column length by more than 20%
 
-levels:: filter the output to entries whose length falls in the range 
+indents:: how much to indent each column by, level*this value is put 
+in \{ixindent} attribute, default 0
+
+levels:: filter the output to entries whose length falls in the range
 specified and limit display to these levels.
 +
 n1-n2::: from level n1 to level n2 inclusive
@@ -197,6 +200,18 @@ n1-::: from level n1 up inclusive
 +
 where n1 and n2 are decimal numbers counting from one.  Missing levels
 attribute means all.  Terms for levels below n1 are not displayed.
+
+sort:: sort as specified, default is all levels by increasing Unicode 
+code point. The attribute value is an optionally whitespace separated
+list of the following:
++
+levels::: limit sort to the specified levels, 'levels' is followed by:
++
+n1-n2:::: from level n1 to level n2 inclusive
+n1-:::: from level n1 up inclusive
+-n1, n1:::: up to level n1 inclusive
++
+where n1 and n2 are decimal numbers counting from one.
 
 style:: name of the style of index to output, see <<pis, Predefined Index
 Styles>>
@@ -251,7 +266,7 @@ substituted, see the following table.
 
 | Set to start with "e" to generate entries for the complete term
 hierarchy, ie if a,b,c were the first terms then a and a,b would
-also be generated.  Set to "t" to expand multi targets to entries as 
+also be generated.  Set to "t" to expand multi targets to entries as
 well.
 
 | prefix | yes, nothing | std here
@@ -312,13 +327,13 @@ The meanings of the placeholders are:
 
 backend:: is the name of the backend that the setting applies to
 
-col_no:: is the settings to use for each column in multi-column output. 
+col_no:: is the settings to use for each column in multi-column output.
 See note below.
 
 level_no:: is the level of the term that this setting applies to.
 See note below.
 
-row_no:: is the settings to use for each column in multi-column output. 
+row_no:: is the settings to use for each column in multi-column output.
 See note below.
 
 style_name:: is the name of a style being defined
@@ -330,32 +345,36 @@ convention is to use "1", "2" etc, beware "10" sorts before "2".
 Substitutions
 ^^^^^^^^^^^^^
 
-Attributes are substituted into output text by enclosing the attribute 
-name in {}.
+Attributes are substituted into output text by enclosing the attribute
+name in {}. Attribute names should be alphanumerics and underscore 
+only. This is not checked.
 
-Substitutions are not recursive, ie \{attr} in an attribute value is not 
+Substitutions are not recursive, ie \{attr} in an attribute value is not
 substituted except in conditional substitutions.
 
 Conditional Substitutions
 +++++++++++++++++++++++++
 
 [NOTE]
-Not implemented in v0.1
+Only name?| implemented in v0.1
 
-Conditional substitutions are performed before other attributes so 
+Conditional substitutions are performed before other attributes so
 values conditionally substituted may contain other attributes.
 
-Inside values the characters question mark (?), colon (:) and close 
-brace (}) must occur twice to distinguish them from the meta 
+Inside values the characters question mark (?), colon (:) and close
+brace (}) must occur twice to distinguish them from the meta
 characters.
 
 [cols="1,2"]
 |====
 | Substitute | Condition to substitute
-| \{name?value} | name is defined
-| \{name?!value} | name is not defined
-| \{name=value1?value2:value3} | name = value1 then value2 else value 3
-| \{name#value1?value2:value3} | name not = value1 then value2 else value3
+| \{name?*value} | name is defined substitute value
+| \{name?#value} | name is not defined substitute value
+| \{name?|value} 
+| if name is defined substitute the attribute, else value
+
+| \{name?=value1?value2:value3} | name = value1 then value2 else value 3
+| \{name?!value1?value2:value3} | name not = value1 then value2 else value3
 |====
 
 The :value3 may be omitted if value3 is nothing.
@@ -363,13 +382,14 @@ The :value3 may be omitted if value3 is nothing.
 Computed Substitutions
 ++++++++++++++++++++++
 
-The following substitutions are computed in context of the term or the 
+The following substitutions are computed in context of the term or the
 target.
 
 [cols="1,1,3"]
 |====
 | Attribute | Group | Value
 | ixterm | term | the current level term
+| ixindent | term | the indent * current level
 | ixtgt | tgt
 | is a unique numeric piece of text identified with the
 target, use it to make link targets
@@ -383,14 +403,14 @@ otherwise the last term.
 Built-in Substitutions
 ++++++++++++++++++++++
 
-The following attributes are built-in, but can be overridden by config 
+The following attributes are built-in, but can be overridden by config
 files:
 
 [cols="1,1,4"]
 |====
 | Name | Value | Use
-| sp | ' ' 
-| Use for leading or trailing spaces where they would otherwise be 
+| sp | ' '
+| Use for leading or trailing spaces where they would otherwise be
 stripped off
 
 | nl | '\n' | Newline
@@ -505,7 +525,8 @@ Probable
 
 - separate levels filter and levels display specification
 - docbook built-ins
-- multi-column indices
+- multi-column indices (alpha)
+- inverse indices
 - CSS stylable standard styles
 
 Possible
